...
        }
    }
    
    private func configureTaskListHeader(view: TaskListHeaderReusableView, indexPath: IndexPath) {
        view.header.setContent(header: Strings("header.tasks").local)
        view.header.newTaskButton
            .setAccessibilityIdentifier(to: "NEW_TASK_BUTTON")
            .setOnTap({
                let newController = NewTaskViewController()
                self.present(newController, animated: true)
            })
        view.header.filterControls
            .setOnTap({ status in
...
